LMSA-9304 move button html to the tool

--- a/src/main/resources/templates/fragments/reports.html
+++ b/src/main/resources/templates/fragments/reports.html
@@ -54,17 +54,17 @@
             <thead>
             <tr>
                 <td class="colCheckbox checkboxColumn" />
-                <th scope="col" class="colResultId exportable">Result ID</th>
-                <th scope="col" class="colBatch exportable">Batch ID</th>
-                <th scope="col" class="colArchived">Archived</th>
-                <th scope="col" class="colUploader exportable">Uploader</th>
-                <th scope="col" class="colDate exportable">Date</th>
-                <th scope="col" class="colFilename exportable">Filename</th>
-                <th scope="col" class="colTool exportable">Tool</th>
-                <th scope="col" class="colSisCourseId exportable">SIS Course ID</th>
-                <th scope="col" class="colCourseId exportable">Canvas Course ID</th>
-                <th scope="col" class="colToolId exportable">Tool ID</th>
-                <th scope="col" class="colDeploymentId exportable">Deployment ID</th>
+                <th scope="col" class="colResultId exportable"><button type="button">Result ID</button></th>
+                <th scope="col" class="colBatch exportable"><button type="button">Batch ID</button></th>
+                <th scope="col" class="colArchived"><button type="button">Archived</button></th>
+                <th scope="col" class="colUploader exportable"><button type="button">Uploader</button></th>
+                <th scope="col" class="colDate exportable"><button type="button">Date</button></th>
+                <th scope="col" class="colFilename exportable"><button type="button">Filename</button></th>
+                <th scope="col" class="colTool exportable"><button type="button">Tool</button></th>
+                <th scope="col" class="colSisCourseId exportable"><button type="button">SIS Course ID</button></th>
+                <th scope="col" class="colCourseId exportable"><button type="button">Canvas Course ID</button></th>
+                <th scope="col" class="colToolId exportable"><button type="button">Tool ID</button></th>
+                <th scope="col" class="colDeploymentId exportable"><button type="button">Deployment ID</button></th>
                 <th scope="col" class="colNotes exportable">Notes</th>
                 <th scope="col" class="colCheckboxName"></th>
             </tr>
