LMSA-9342 - Use the correct data attribute to get the form id

--- a/src/main/resources/templates/fragments/reports.html
+++ b/src/main/resources/templates/fragments/reports.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="rvt-dialog__controls">
                     <button id="dialog-cancel" type="button" class="rvt-button rvt-button--secondary" data-rvt-dialog-close="archive-confirmation">Cancel</button>
-                    <button id="dialog-submit" type="button" class="rvt-button" onclick="buttonLoading(this)" data-form-id="etext-reports-form">
+                    <button id="dialog-submit" type="button" class="rvt-button" onclick="buttonLoading(this)" data-formid="etext-reports-form">
                         <span class="rvt-button__content">Yes, archive</span>
                         <div id="remove-users-loader" class="rvt-loader rvt-loader--xs rvt-display-none"></div>
                         <span aria-live="polite">
